Edicion de la pagina web añadiendo plantillas

--- a/05.Página_Web/index.html
+++ b/05.Página_Web/index.html
@@ -320,13 +320,9 @@
  
             </section>
 
-
-
-
-
             <section id="categorias">
                 <h3>Explora Categorías</h3>
-                <p>Encuentra tus juegos favoritos por género.</p>
+                <p>Encuentra tus juegos favoritos por género y mucho mas.</p>
             </section>
             </main>
         <aside class="right-sidebar">
