Reestructura de pequeños codigos

--- a/07.juego_Libre/index.html
+++ b/07.juego_Libre/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>Salta a la cima</h1>
+        <h1>Cube Climber</h1>
         <canvas id="gameCanvas"></canvas>
         <div class="controls-area">
             <button id="startButton" class="game-button"><i class="fas fa-play"></i>Iniciar el juego</button>
