Ajuste de colores para la página web y adición de animaciones

--- a/10.tailwindcss/index.html
+++ b/10.tailwindcss/index.html
@@ -70,7 +70,7 @@
         </section>
         <section id="sobre-mi" class="content-section">
             <h2>Sobre mí</h2>
-            <p>Soy escritor apasionado por explorar las complejidades del alma humana a traves del drama, construir
+            <p style="color: black;">Soy escritor apasionado por explorar las complejidades del alma humana a traves del drama, construir
                 mundos imposibles en la fantasía y capturar la belleza del mundo desde la poesía.</p>
             <p>Mi viaje literario...</p>
         </section>
