solución de error ortográfico

--- a/10.tailwindcss/index.html
+++ b/10.tailwindcss/index.html
@@ -65,7 +65,7 @@
     <div class="main-content">
         <section id="Inicio" class="content-section prin">
             <h2>Bienvenidos a mi mundo de palabras.</h2>
-            <p>Explora en dramas prifundos, algo de fantasía y también poesía que suelo escribir.✒️✒️</p>
+            <p>Explora en dramas profundos, algo de fantasía y también poesía que suelo escribir.✒️✒️</p>
             <a href="#Obras" class="btn-primary">Descubre mis Obras</a>
         </section>
         <section id="sobre-mi" class="content-section">
