Edición de errores en los colores y clases

--- a/10.tailwindcss/index.html
+++ b/10.tailwindcss/index.html
@@ -66,13 +66,13 @@
         <section id="Inicio" class="content-section prin">
             <h2>Bienvenidos a mi mundo de palabras.</h2>
             <p>Explora en dramas profundos, algo de fantasía y también poesía que suelo escribir.✒️✒️</p>
-            <a href="#Obras" class="btn-primary">Descubre mis Obras</a>
+            <a href="#obras" class="btn-primary">Descubre mis Obras</a>
         </section>
         <section id="sobre-mi" class="content-section">
             <h2>Sobre mí</h2>
             <p style="color: black;">Soy escritor apasionado por explorar las complejidades del alma humana a traves del drama, construir
                 mundos imposibles en la fantasía y capturar la belleza del mundo desde la poesía.</p>
-            <p>Mi viaje literario...</p>
+            <p style="color: black;">Mi viaje literario...</p>
         </section>
 
         <section id="obras" class="content-section">
